@@ -54,6 +54,7 @@
                     <release>25</release>
                     <source>25</source>
                     <target>25</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
